# skinning

./: CMakeLists.txt  README
project/data/: cat.animations  cat_bind_pose.skeleton
project/doc/: README  doxygen_config
project/shaders/: shader_axes.frag  shader_axes.vert  shader_mesh.frag  shader_mesh.vert  shader_skeleton.frag  shader_skeleton.vert
project/src/lib/3d/: mat1x4.cpp  mat1x4.hpp  mat2.cpp  mat2.hpp  mat3.cpp  mat3.hpp  mat4.cpp  mat4.hpp  mat4x1.cpp  mat4x1.hpp  quaternion.cpp  quaternion.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp  vec4.cpp  vec4.hpp
project/src/lib/common/: backtrace.cpp  backtrace.hpp  error_handling.hpp  exception_cpe.cpp  exception_cpe.hpp
project/src/lib/interface/: application_qt.cpp  application_qt.hpp  camera_matrices.hpp  moc_application_qt.cxx  moc_application_qt.cxx_parameters  navigator_tool.cpp  navigator_tool.hpp  picking_data.cpp  picking_data.hpp  selected_index.cpp  selected_index.hpp  trackball.cpp  trackball.hpp
project/src/lib/intersection/: intersection.cpp  intersection.hpp
project/src/lib/mesh/: mesh.cpp  mesh.hpp  mesh_basic.cpp  mesh_basic.hpp  mesh_io.cpp  mesh_io.hpp  mesh_parametric.cpp  mesh_parametric.hpp  triangle_index.cpp  triangle_index.hpp
project/src/skinning/: mesh_skinned.cpp  mesh_skinned.hpp  skeleton_animation.cpp  skeleton_animation.hpp  skeleton_geometry.cpp  skeleton_geometry.hpp  skeleton_joint.cpp  skeleton_joint.hpp  skeleton_parent_id.cpp  skeleton_parent_id.hpp  skinning_weight.cpp  skinning_weight.hpp  vertex_weight_parameter.cpp  vertex_weight_parameter.hpp
(+26 files in other folders)
